--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/projects.css" />
     <link rel="stylesheet" href="styles/foot.css" />
     <link rel="stylesheet" href="styles/skills.css" />
+    <link rel="icon" type="image/x-icon" href="./visuals/favicon.ico">
     <title>portfolio | savion nadar</title>
   </head>
   <body>
@@ -90,11 +91,6 @@
     <div id="scrollCont">
       <div class="slide1 page" id="home">
         <div class="cursorCont"><div class="cursor"></div></div>
-        <nav>
-          <img src="" alt="pfp" />
-          <!-- TODO: create menu section -->
-          <div class="menu"></div>
-        </nav>
         <div class="intro">
           <div class="firstName">
             <div class="cont">
