Add google analytics.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Savion Nadar's portfolio website | An aspiring full-stack web-developer." />
+    <meta
+      name="description"
+      content="Savion Nadar's portfolio website | An aspiring full-stack web-developer."
+    />
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/animations.css" />
     <link rel="stylesheet" href="styles/splash.css" />
@@ -12,9 +15,23 @@
     <link rel="stylesheet" href="styles/projects.css" />
     <link rel="stylesheet" href="styles/foot.css" />
     <link rel="stylesheet" href="styles/skills.css" />
-    <link rel="icon" type="image/x-icon" href="./visuals/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./visuals/favicon.ico" />
     <title>portfolio | savion nadar</title>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-7QN604GJ1K"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-7QN604GJ1K");
+  </script>
   <body>
     <div class="splash">
       <div class="firstName">
@@ -430,7 +447,10 @@
                   </a>
                 </div>
                 <div class="insta">
-                  <a href="https://www.instagram.com/savionnadar" target="_blank">
+                  <a
+                    href="https://www.instagram.com/savionnadar"
+                    target="_blank"
+                  >
                     <i
                       class="fa-brands fa-instagram"
                       style="color: #ffffff"
