Make copy more student like.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Savion Nadar's portfolio website | An aspiring full-stack web-developer."
+      content="Savion Nadar's portfolio website | A 15yo developer."
     />
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/animations.css" />
@@ -67,40 +67,30 @@
       </div>
       <div class="key">
         <div class="cont">
-          <span>a</span>
-          <span>s</span>
+          <span>o</span>
           <span>p</span>
+          <span>t</span>
           <span>i</span>
-          <span>r</span>
+          <span>m</span>
           <span>i</span>
-          <span>n</span>
-          <span>g</span>
+          <span>s</span>
+          <span>t</span>
+          <span>i</span>
+          <span>c</span>
         </div>
       </div>
       <div class="skill">
         <div class="cont">
-          <span>f</span>
-          <span>u</span>
-          <span>l</span>
-          <span>l</span>
-          <span>-</span>
-          <span>s</span>
-          <span>t</span>
-          <span>a</span>
           <span>c</span>
-          <span>k</span>
+          <span>h</span>
+          <span>a</span>
+          <span>n</span>
+          <span>g</span>
+          <span>e</span>
           <span style="visibility: hidden">_</span>
-          <span>w</span>
-          <span>e</span>
-          <span>b</span>
-          <span>-</span>
-          <span>d</span>
-          <span>e</span>
-          <span>v</span>
-          <span>e</span>
-          <span>l</span>
-          <span>o</span>
-          <span>p</span>
+          <span>m</span>
+          <span>a</span>
+          <span>k</span>
           <span>e</span>
           <span>r</span>
         </div>
@@ -137,8 +127,8 @@
                 <span>(pretty tricky, ngl)</span>
               </div>
               <div class="el2">
-                <span>Aspiring to be, a full-stack</span>
-                <span>web-developer; someday...</span>
+                <span>Aspiring to be, a proficient</span>
+                <span>web-developer; one day...</span>
               </div>
               <div class="el3">
                 <span>although rn, back-end does</span>
@@ -279,8 +269,8 @@
           </div>
           <div class="brief1">
             <span>hey there 👋!</span>
-            <span>I'm Savion, optimistic developer.</span>
-            <span>specifically full-stack web-developer.</span>
+            <span>I'm Savion, an optimistic</span>
+            <span>15yo developer (and so much more...)</span>
             <span>well, at least fn. Not sure</span>
             <span>what else tickles my fancy</span>
             <span>just yet... 🤔</span>
@@ -478,7 +468,7 @@
           </div>
           <div class="bottom">
             <div class="brief">
-              <span>Aspiring/Full-stack/Web-developer</span>
+              <span>Optimistic Student (and so much more...)</span>
               <span>portfolio 2024</span>
             </div>
             <div class="name">
